// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Footer > should create a Footer in english 1`] = `
<DocumentFragment>
  <footer
    class="border-border border-t px-12 py-3.5 flex items-center justify-between flex-wrap gap-4"
  >
    <span
      class="font-mono text-[10px] tracking-[0.1em] uppercase text-text-faint"
    >
      Source: INSEE via 
      <a
        class="underline-offset-2 hover:text-text hover:underline"
        href="https://www.data.gouv.fr/fr/datasets/fichier-des-personnes-decedees"
        rel="noopener noreferrer"
        target="_blank"
      >
        data.gouv.fr
      </a>
    </span>
    <span
      class="font-mono text-[10px] tracking-[0.1em] uppercase text-text-faint"
    >
      v0.0.0 · 
      <a
        class="underline-offset-2 hover:text-text hover:underline"
        href="https://github.com/chewam/mortality/tree/dev"
        rel="noopener noreferrer"
        target="_blank"
      >
        dev
      </a>
    </span>
  </footer>
</DocumentFragment>
`;

exports[`Footer > should create a Footer in french 1`] = `
<DocumentFragment>
  <footer
    class="border-border border-t px-12 py-3.5 flex items-center justify-between flex-wrap gap-4"
  >
    <span
      class="font-mono text-[10px] tracking-[0.1em] uppercase text-text-faint"
    >
      Source : INSEE via 
      <a
        class="underline-offset-2 hover:text-text hover:underline"
        href="https://www.data.gouv.fr/fr/datasets/fichier-des-personnes-decedees"
        rel="noopener noreferrer"
        target="_blank"
      >
        data.gouv.fr
      </a>
    </span>
    <span
      class="font-mono text-[10px] tracking-[0.1em] uppercase text-text-faint"
    >
      v0.0.0 · 
      <a
        class="underline-offset-2 hover:text-text hover:underline"
        href="https://github.com/chewam/mortality/tree/dev"
        rel="noopener noreferrer"
        target="_blank"
      >
        dev
      </a>
    </span>
  </footer>
</DocumentFragment>
`;
